Fix intro bugs
1. Intro is not responsive
2. Intro Citing section has wrong position in firefox and opera.

--- a/scss/intro/_card_cite.scss
+++ b/scss/intro/_card_cite.scss
@@ -2,14 +2,18 @@ $cardMidMargin : 10px;
 
 .card-mid {
   position    : relative;
-  width       : $cardRightW;
+  // width       : $cardRightW;
   height      : $cardMidH;
   margin-left : $cardLeftW;
   opacity     : 0.99;
 }
 
 .cite-con {
-  overflow   : hidden;
+  overflow    : hidden;
+  position    : absolute;
+  top         : 0;
+  left        : -10px;
+  margin-left : 0 !important;
 
   &:after {
     @extend .sprite;
@@ -34,10 +38,9 @@ $cardMidMargin : 10px;
   padding     : 0 $cardMidMargin;
   margin-left : -$cardMidMargin;
   overflow    : hidden;
+  position    : relative;
   
   .cite-con {
-    position : absolute;
-    top      : 0;
     left     : 0;
     width    : 100%;
     height   : 100%;
